# chopper.ai

./: .env.example  .gitignore  README.md  config.py  install.sh  pyproject.toml  requirements.txt  uninstall.sh
chopper/: config.py  main.py
chopper/animations/: spinner.py
chopper/executor/: command_chooser.py  command_executor.py
chopper/formatter/: response_formatter.py
chopper/llm_connector/: llm_client.py
chopper/prompts/: chopper_help.txt
chopper/system_info/: system_info_fetcher.py
chopper/ui/: terminal_ui.py
